--- a/abonar.html
+++ b/abonar.html
@@ -36,8 +36,9 @@
                 <label for="payment-method">Método de Pago:</label>
                 <select id="payment-method" name="payment-method" required>
                     <option value="credit-card">Tarjeta de Crédito</option>
-                    <option value="paypal">PayPal</option>
+                    <option value="BanColombia">BanColombia</option>
                     <option value="bank-transfer">Transferencia Bancaria</option>
+                    <option value="credit-card">Tarjeta de Debito</option>
                 </select>
     
                 <label for="payment-details">Detalles del Pago:</label>
